# api/core-api/app/Http/Requests/Authentication/ForgotPasswordRequest.php
@@ -4,7 +4,7 @@ namespace App\Http\Requests\Authentication;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class SendResetPasswordConfirmationRequest extends FormRequest
+class ForgotPasswordRequest extends FormRequest
 {
     public function authorize(): bool
     {
