# api/core-api/app/OpenApi/Schemas/Authentication/ForgotPasswordRequest.php
@@ -6,11 +6,11 @@ use OpenApi\Annotations as OA;
 
 /**
  * @OA\Schema(
- *     schema="SendResetPasswordConfirmationRequest",
+ *     schema="ForgotPasswordRequest",
  *     type="object",
  *     required={"email"},
  *
  *     @OA\Property(property="email", type="string", format="email", description="The email of the user"),
  * )
  */
-class SendResetPasswordConfirmationRequest {}
+class ForgotPasswordRequest {}
